--- a/index.html
+++ b/index.html
@@ -1,17 +1,64 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Roll a Ball Game</title>
-    <link rel="stylesheet" href="styles.css">
+  <style>
+    #container {
+      width: 400px;
+      height: 400px;
+      border: 1px solid black;
+      position: relative;
+    }
+    #ball {
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
 </head>
 <body>
-    <div id="game-container">
-        <div id="ball"></div>
-        <div id="goal"></div>
-    </div>
-    <script src="script.js"></script>
+
+<div id="container">
+  <div id="ball"></div>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    const container = document.getElementById('container');
+    const ball = document.getElementById('ball');
+
+    // Beweging van de bal
+    document.addEventListener('keydown', function(event) {
+        const key = event.key;
+        const ballStyle = getComputedStyle(ball);
+        let ballLeft = parseInt(ballStyle.left);
+        let ballTop = parseInt(ballStyle.top);
+
+        switch (key) {
+            case 'ArrowUp':
+                ballTop = Math.max(ballTop - 10, 0); // Controleer de bovenste rand
+                break;
+            case 'ArrowDown':
+                ballTop = Math.min(ballTop + 10, container.clientHeight - ball.clientHeight); // Controleer de onderste rand
+                break;
+            case 'ArrowLeft':
+                ballLeft = Math.max(ballLeft - 10, 0); // Controleer de linker rand
+                break;
+            case 'ArrowRight':
+                ballLeft = Math.min(ballLeft + 10, container.clientWidth - ball.clientWidth); // Controleer de rechter rand
+                break;
+        }
+
+        // Update positie van de bal
+        ball.style.left = ballLeft + 'px';
+        ball.style.top = ballTop + 'px';
+    });
+  });
+</script>
+
 </body>
 </html>
-
