--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    #container {
+      width: 400px;
+      height: 400px;
+      border: 1px solid black;
+      position: relative;
+    }
+    #ball {
+      width: 20px;
+      height: 20px;
+      background-color: red;
+      border-radius: 50%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+</head>
+<body>
+
 <div id="container">
   <div id="ball"></div>
 </div>
